# multitest_poc

./: Cargo.toml  README.md
all_separate/: Cargo.toml
all_separate/src/: counter.rs  counter_impl.rs  lib.rs
all_separate/src/multitest/: tests.rs
src/: contract.rs  counter.rs  lib.rs  sylvia_utils.rs
src/multitest/: tests.rs
trait_impl_together/: Cargo.toml
trait_impl_together/src/: contract.rs  counter.rs  lib.rs
trait_impl_together/src/multitest/: tests.rs
utils/: Cargo.toml
utils/src/: error.rs  lib.rs
