[package]
name = "multitest_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sylvia = "0.2.1"
cosmwasm-std = "1.1.9"
schemars = "0.8.11"
cosmwasm-schema = "1.1.9"
serde = "1"
cw-storage-plus = "1.0.1"
