[package]
name = "multitest_poc"
version = "0.1.0"
edition = "2021"

[features]
mt = []

[dependencies]
sylvia = "0.2.2"
cosmwasm-std = "1.1.9"
schemars = "0.8.11"
cosmwasm-schema = "1.1.9"
serde = "1"
cw-storage-plus = "1.0.1"
thiserror = "1.0.37"

[dev-dependencies]
cw-multi-test = "0.16"
anyhow = "1"
