[package]
name = "multitest_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
sylvia = "0.3.1"
cosmwasm-std = "1.2.2"
schemars = "0.8.12"
cosmwasm-schema = "1.2.2"
serde = "1"
cw-storage-plus = "1.0.1"
thiserror = "1.0.39"
anyhow = { version = "1", optional = true }
cw-multi-test = { version = "0.16", optional = true }

[dev-dependencies]
cw-multi-test = "0.16"
anyhow = "1"
sylvia = { version = "0.3.1", features = ["mt"] }
